# spade_anomaly_detection

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  data_loader.py  data_loader_test.py  init.txt  occ_ensemble.py  occ_ensemble_test.py  parameters.py  parameters_test.py  performance_test.py  pyproject.toml  requirements.txt  runner.py  runner_test.py  supervised_model.py  supervised_model_test.py  task.py
.github/workflows/: publish_to_pypi.yml  pytest_and_autopublish.yml  python-publish.yml
data_utils/: BUILD  __init__.py  bq_dataset.py  bq_dataset_test.py  bq_dataset_test_utils.py  bq_utils.py  bq_utils_test.py  feature_metadata.py  feature_metadata_test.py
example_data/: README.md  covertype_pnu_10000.csv  covertype_pu_labeled.csv  drug_train_pu_labeled.csv
scripts/: build_and_push_image.sh  run_cloud_spade_experiment.sh
spade_anomaly_detection/: Dockerfile  __init__.py  csv_data_loader.py  csv_data_loader_test.py  data_loader.py  data_loader_test.py  occ_ensemble.py  occ_ensemble_test.py  parameters.py  parameters_test.py  performance_test.py  pyproject.toml  requirements.txt  runner.py  runner_test.py  supervised_model.py  supervised_model_test.py  task.py
spade_anomaly_detection/colabs/: spade_preprocessing.ipynb
spade_anomaly_detection/data_utils/: __init__.py  bq_dataset.py  bq_dataset_test.py  bq_dataset_test_utils.py  bq_utils.py  bq_utils_test.py  feature_metadata.py  feature_metadata_test.py
spade_anomaly_detection/example_data/: covertype_pnu_10000.csv  covertype_pnu_train.csv  covertype_pu_train.csv  covertype_test.csv  thyroid_labeled.csv
spade_anomaly_detection/scripts/: run_cloud_spade_experiment.sh
